--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Zer Creation</title>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    <script src="sketch.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
